# Expr_Sense_Bot

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  build.sh
ai_audio/config/: Exp009M060_16k_mdl-v1.0_10ms_32ms_simple.mnn
ai_audio/inc/: ai_array_mic.h  ai_audio.h  ai_audio_init.h  ai_audio_ops.h
ai_audio/src/: ai_array_mic.c  ai_audio_ops.c  ai_audio_play.c  ai_audio_reading.c
ai_car_project/: .gitignore  README.md  ai_car_main.c  ai_car_main.h
ai_car_project/ai_audio/inc/: ai_audio_play.h
ai_car_project/ai_common/src/: ai_common_ringbuffer.c  ai_common_service.c  ai_log.c
ai_car_project/ai_kws/quec_kws/inc/: ArgumentParser.h  DynmaicLibLoader.h  defines.h  stringUtil.h
ai_car_project/ai_kws/quec_kws/inc/ivw/: errcode_module.h
ai_car_project/ai_kws/quec_kws/src/: ai_kws_ivw.cpp
ai_car_project/ai_large_model/: ai_large_model_ops.h
ai_car_project/ai_large_model/coze/config/: web_self_config.json
ai_car_project/ai_large_model/coze/config/websocket_config/: websocket_config.json
ai_car_project/ai_large_model/coze/inc/: ai_websocket_echo_cancellation.h  fftw3.h  qlspeech_frontend_ans_quecans_config.h
ai_car_project/ai_local_asr/: ai_local_asr_ops.c  ai_local_asr_ops.h
ai_car_project/ai_local_asr/quec_local_asr/config/Resource/: ivHmmRes_16K.irf
ai_car_project/ai_local_asr/quec_local_asr/inc/: ai_local_asr.h  ivDefine.h  ql_WakeUpAPI.h
ai_car_project/ai_qth/inc/: ai_qth_ops.h
ai_car_project/ai_robot_face/: robot_face.py
ai_car_project/ai_ros2/ros2_ws/src/bringup/: package.xml
ai_car_project/ai_ros2/ros2_ws/src/large_models/: package.xml
ai_car_project/ai_ros2/ros2_ws/src/large_models_msgs/: package.xml
ai_car_project/ai_ros2/software/Servo_upper_computer/: servo_config.yaml
ai_car_project/ai_ros2/software/collect_picture/: collect_picture.sh  ui.bk
ai_car_project/ai_server/rules.d/: fastrpc-cdsp.rules
ai_car_project/ai_server/run/: find_device.py  remote.py  test_camera.sh  wifi.py  wifi_conf.py
ai_car_project/ai_server/service/: remote.service
ai_car_project/ai_tools/: README.md  pull_log.bat  push_output.bat
ai_car_project/ai_tracker_body/: README.md  app  build.sh  setup.py
ai_car_project/ai_tracker_body/include/: ExtractorWrapper.h
ai_car_project/ai_tracker_body/model/face/: model.json
ai_car_project/ai_tracker_body/model/person/: model.json  sim.engine
ai_car_project/object_tracker/: CMakeLists.txt  authorized_keys  py_tracker_binding.cpp
ai_car_project/object_tracker/include/: object_tracker.h
ai_common/inc/: ai_common_base64.h  ai_common_define.h  ai_common_list.h  ai_common_message_queue.h  ai_common_ringbuffer.h  ai_common_shm.h  ai_log.h
ai_common/src/: ai_common_base64.c  ai_common_list.c  ai_common_message_queue.c  ai_common_shm.c
ai_kws/: ai_kws_ops.c  ai_kws_ops.h
ai_kws/quec_kws/config/res_shuffnet_v2/: mlp.irf
ai_kws/quec_kws/inc/: IvwWrapper.h  ai_kws_ivw.h  errorCode.h  gbk_unicode.h  quec_ai_kws_ivw.h  stringutil.inl  trans_code.h
ai_kws/quec_kws/inc/ivw/: ivw_defines.h  ivw_err.h  ivw_type.h
ai_kws/quec_kws/src/: DynmaicLibLoader.cpp  IvwWrapper.cpp  gbk_unicode.cpp  trans_code.cpp
ai_large_model/: ai_large_model_ops.c
ai_large_model/coze/inc/: ai_websocket.h  ai_websocket_config.h  ai_websocket_coze.h  qlspeech_define.h  qlspeech_frontend_aec_ans_api.h  qlspeech_frontend_ans_config.h  qlspeech_frontend_ans_errorcode.h  qlspeech_platform.h
ai_large_model/coze/src/: ai_config.c  ai_coze_handler_downstream.c  ai_coze_handler_upsteam.c  ai_coze_taken.c  ai_websocket.c
ai_local_asr/quec_local_asr/config/: default.bnf
ai_local_asr/quec_local_asr/inc/: ivESR.h  ivErrorCode.h  ivEsrDefine.h  ivEsrErrorCode.h  ivPlatform.h
ai_local_asr/quec_local_asr/lib/: libfftw3.so.3
ai_local_asr/quec_local_asr/src/: ai_local_asr.c
ai_qth/inc/: qth_control.h
ai_qth/src/: ai_qth_ops.c
ai_ros2/ros2_ws/src/app/: setup.py
ai_ros2/ros2_ws/src/app/app/: avoidance_node.py  face_detection_test.py  hand_gesture.py  tracking.py  (+1 more)
ai_ros2/ros2_ws/src/install/: setup.sh
ai_ros2/ros2_ws/src/large_models/: CMakeLists.txt  setup.py
ai_ros2/ros2_ws/src/large_models/include/large_models/: posix_shm_manager.h
ai_ros2/ros2_ws/src/large_models/large_models/: config.py  llm_color_track.py  llm_visual_patrol.py  vllm_obstacle_avoidance.py
ai_ros2/ros2_ws/src/large_models/launch/: agent_process.launch.py  llm_color_track.launch.py  llm_control_move.launch.py  llm_visual_patrol.launch.py  qth_control_move.launch.py  tts_node.launch.py  vllm_obstacle_avoidance.launch.py  vllm_with_camera.launch.py
ai_ros2/ros2_ws/src/large_models_msgs/: CMakeLists.txt
ai_ros2/ros2_ws/src/peripherals/: setup.py
ai_ros2/software/Servo_upper_computer/: ServoCmd.py  Ui.py  bus_servos_read.py  main.py  main.sh  ros_robot_controller_sdk.py  yaml_handle.py
ai_ros2/software/collect_picture/: collect_picture.desktop  config.ini  main.py  ui.py  xml2yolo.py
ai_ros2/software/collect_picture/my_data/: classes.names  data.yaml
ai_ros2/software/lab_tool/: lab_config.yaml  main.py  main.sh
ai_ros2/software/labelImg/libs/: resources.py
ai_server/rules.d/: 99-quectel-cm.rules  99-ttyHS2.rules  fastrpc-adsp.rules  fastrpc.rules
ai_server/run/: button_scan.py  deploy_service_config.sh  detect_camera.sh  fix_python_dependencies.sh  main.conf  service_manager.sh  start_car.sh
ai_server/service/: button_scan.service  find_device.service  start_car.service  start_node.service  v4l2loopback.service  wifi.service
ai_tracker_body/: config.json  example.cpp  test111.py  test_person.py  tracker_final.cpp  tracker_pybind.cpp
ai_tracker_body/model/face/: sim.engine
ai_tracker_body/model/hand/: model.json  sim.engine
ai_tracker_body/model/reid/: model.json
object_tracker/: CHANGELOG.md  README.md  test_camera.py
object_tracker/models/reid/: sim.engine
object_tracker/src/: main.cpp
(+111 files in other folders)
